syntax = "proto3";

package callmanager;

option java_string_check_utf8 = true;
option java_generate_equals_and_hash = true;
option java_multiple_files = true;
option java_package = "cc.web3e.protobuf.callmanager";
option java_outer_classname = "ACLProto";

import "common/common.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";


service ACLService {
  rpc ListACLs (common.ListRequest) returns (ACLsList) {};
  rpc GetACL (common.IdMessage) returns (ACLMessage) {};
  rpc SetACL (ACLMessage) returns (ACLMessage) {};
  rpc ToggleACL (common.IdMessage) returns (google.protobuf.Empty) {};
  rpc RemoveACL (common.IdMessage) returns (google.protobuf.Empty) {};
  rpc GetFreeswitchXml (google.protobuf.Empty) returns (google.protobuf.StringValue) {};
}

message ACLMessage {
  // @format uuid
  // @default "00000000-0000-0000-0000-000000000000"
  string id = 1;
  // @default true
  bool is_enabled = 2;
  string name = 3;
  optional string description = 4;
  // @default deny
  string action = 5;
  repeated ACLEntryMessage entries = 6;
}


message ACLEntryMessage {
  // @format uuid
  // @default "00000000-0000-0000-0000-000000000000"
  string id = 1;
  // @default true
  bool is_enabled = 2;
  optional string description = 3;
  // @default allow
  string action = 4;
  string target = 5;
  string value = 6;
}


message ACLsList {
  common.Pagination pagination = 1;
  repeated ACLMessage items = 2;
}

